# HyperLiquidTrader

./: .replit  adaptation_guide.md  analysis_report.md  code_implementation_example.md  pyproject.toml  ui_implementation_plan.md
HyperLiquidPerpBot/: DEPLOYMENT.md  README.md  VPS_README.md  bot_data.db  requirements.txt  run.py  vps_setup.sh
HyperLiquidPerpBot/app/: __init__.py  config.py  exchange_manager.py  logger.py  main.py  webhook.py
HyperLiquidPerpBot/ui/: __init__.py  database.py  server.py
HyperLiquidPerpBot/ui/static/css/: style.css
HyperLiquidPerpBot/ui/static/js/: dashboard.js
HyperLiquidPerpBot/ui/templates/: index.html
